--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "my-webpack-project",
-  "version": "1.0.0",
-  "description": "My webpack project",
-  "main": "index.js",
+  "name": "@dak79/dropdown-menu",
+  "version": "0.0.1",
+  "description": "A barebone dropdown menu",
+  "main": "main.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,24 +14,14 @@
   "keywords": [
     "dropdown",
     "html",
-    "css"
+    "css",
+    "javascript",
+    "component"
   ],
-  "author": "Daniele Campari",
+  "author": "Daniele Campari (dak79)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/dak79/odin-dropdown/issues"
   },
-  "homepage": "https://github.com/dak79/odin-dropdown#readme",
-  "devDependencies": {
-    "@webpack-cli/generators": "^3.0.1",
-    "css-loader": "^6.7.1",
-    "eslint-config-prettier": "^8.5.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "prettier": "^2.8.1",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
-  }
+  "homepage": "https://github.com/dak79/odin-dropdown#readme"
 }
